// Vitest Snapshot v1

exports[`Table > renders selected rows 1`] = `
<table
  class="sc-bqiRlB iddtuG"
>
  <thead
    class="sc-ksdxgE cKrAHV"
  >
    <tr
      class="sc-ieecCq kjoXAI"
    >
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header A
      </th>
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header B
      </th>
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header C
      </th>
    </tr>
  </thead>
  <tbody
    class="sc-hBUSln QoxkZ"
  >
    <tr
      class="sc-ieecCq kjoXAI"
    >
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content A1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content B1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content C1
      </td>
    </tr>
    <tr
      class="sc-ieecCq hDJWbS"
    >
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content A2
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content B2
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content C2
      </td>
    </tr>
    <tr
      class="sc-ieecCq kjoXAI"
    >
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content A3
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content B3
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders with some content 1`] = `
<table
  class="sc-bqiRlB iddtuG"
>
  <thead
    class="sc-ksdxgE cKrAHV"
  >
    <tr
      class="sc-ieecCq kjoXAI"
    >
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header A
      </th>
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header A
        <svg
          fill="none"
          height="16"
          style="vertical-align: middle;"
          viewBox="0 0 11 16"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.375 5L5.375 1L9.375 5M9.375"
            stroke="#9CA3AF"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.67"
          />
          <path
            d="M1.375 5M9.375 11L5.375 15L1.375 11"
            stroke="#9CA3AF"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.67"
          />
        </svg>
      </th>
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header B
        <svg
          fill="none"
          height="7"
          viewBox="0 0 12 7"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 6L6 1L1 6"
            stroke="#6B7280"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.67"
          />
        </svg>
      </th>
      <th
        class="sc-fFeiMQ cGlYYl"
      >
        Header C
        <svg
          fill="none"
          height="7"
          viewBox="0 0 12 7"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 1L6 6L1 1"
            stroke="#6B7280"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.67"
          />
        </svg>
      </th>
      <td
        class="sc-bkkeKt iKZsIB"
      />
    </tr>
  </thead>
  <tbody
    class="sc-hBUSln QoxkZ"
  >
    <tr
      class="sc-ieecCq kjoXAI"
    >
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content A1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content B1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content C1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      />
    </tr>
    <tr
      class="sc-ieecCq ccTDHB"
    >
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content A1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content B1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        Content C1
      </td>
      <td
        class="sc-bkkeKt iKZsIB"
      >
        <span
          class="sc-dJjYzT cSXeVl"
        >
          New
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
